# ToolBOSCore

./: .gitlab-ci.yml  .shellcheckrc  AUTHORS.md  BashSrc  CMakeLists.txt  CmdSrc.bat  CmdSrcMinGW.bat  LICENSE  README.md  ThirdPartyLicenses.txt  activate-conda.sh  activate-venv.sh  ci-all-conda.sh  ci-all-venv.sh  ci-check.sh  ci-sonarqube.sh  ci-test.sh  compile.sh  environment.yml  pkgInfo.py  pyproject.toml  requirements.txt  setup-conda.sh  setup-venv.sh  sonar-project.properties  switchSIT.rc  unittest.sh  useFromHere.bat  useFromHere.sh
doc/: ComplianceChecks.md  CrossCompilation.md  PortingToNewPlatform.txt  PythonScriptRequirements.txt  ReleaseNotes.txt  Terminology.txt  ToolBOS-Setup-Guide.txt  bumpVersion.sh  documentation.h  userDoxyfile
doc/Concepts/: ProxyDirectory.odp
doc/Logos/: BST.xcf  ToolBOS-Icon.xcf  ToolBOS-Logo.pptx  ToolBOS-Logo.xcf
doc/ToolBOSCore/Concepts/: Concept.md  InstallationConventions.md  ProxyDirectory.md  QualityGuidelines.md  RollingReleases.md  SIT.md  SourceTreeConventions.md  Terminology.md  ToolBOSConf.md
doc/ToolBOSCore/Examples/: ToolBOSConf.md  unittestExample.md
doc/ToolBOSCore/How To's/: ANY_REQUIRE.md  CompilationProblems.md  CoreDumps.md  Debugging.md  DeprecatedPkg.md  ExternalPackages.md  GdbServer.md  NetworkProblems.md  SITBuilds.md  ToolBOSBetaTest.md  UsingGdb.md
doc/ToolBOSCore/HowTo/: DeprecatedPkg.md  ExternalPackages.md  LicenseChecks.md  PerformanceProblems.md  RemoteDebugging.md  SITBuilds.md  Segfaults&MemoryLeaks.md  SourceCodeDebugging.md  StartupLibraryloading.md  TotalView.md  UserDoxyfile.md  UsingDDD.md  WritingC_CPlusPlusLibraries.md
doc/ToolBOSCore/Setup/: InstallingToolBOS.md  Setup.md  ShellConfig.md  SourcingAdditionalPackages.md  SupportedPlatforms.md
doc/ToolBOSCore/Tools/: ExecInAllProjects.md
etc/: Doxyfile  Doxyfile-Python  LogCollector.ini  PylintConf.toml  ToolBOS.conf  ToolBOS.conf.h  ToolBOS.conf.sh
etc/Klocwork/: workingsets.xml
etc/PyCharm/user/: HRI.xml  proxy.settings.xml
etc/mako-templates/BST/: BashSrc.mako
etc/mako-templates/CMakeProject/: CMakeLists.txt.mako
etc/mako-templates/C_Library/: packageName.c.mako  packageName.h.mako  pkgInfo.py  unittest.c.mako
etc/mako-templates/C_MainProgram/: main.c.mako
etc/mako-templates/Cpp_Class/: packageName.cpp.mako  packageName.h.mako
etc/mako-templates/Cpp_MainProgram/: main.cpp.mako
etc/mako-templates/master/: CMakeLists.txt  CMakeLists.txt.mako  pkgInfo.py.mako  unittest.sh
examples/: AnyLogExample.py  ToolBOS.conf  pkgInfo.py  unittest.c
include/: ConvertUserSrcToXML.php  MakefileSystem.bash  SIT.bash  Unittest.bash  UnpackSources.sh
include/CMake/: BST_BuildExecutables.cmake  BST_BuildJar.cmake  BST_BuildLibraries.cmake  BST_BuildPeakcan.cmake  BST_DefaultSettings.cmake  BST_DependencyInclusion.cmake  BST_PackageNameAndVersion.cmake  CMakeParseArguments.cmake  DumpWinSymbols.py  FindBuildSystemTools.cmake  FindJava.cmake  FindPackageHandleStandardArgs.cmake  FindPeakcanBuild.cmake  Linux-ARMv7-cross.cmake  MinGW-linux.cmake  Peakcan-cross.cmake  UseJava.cmake  UseJavaClassFilelist.cmake  UseJavaSymlinks.cmake  Windows-WineMSVC.cmake  phyBOARD-WEGA-cross.cmake
include/CMake/Platform/: Linux-MSVC.cmake  Peakcan.cmake  phyboardwega.cmake
include/RTMaps/: AddDRMSignature.sh
include/ToolBOSCore/BuildSystem/: BuildSystemTools.py  CanonicalPath.py  Compilers.py  DocumentationCreator.py  GlobalInstallLog.py  InstallProcedure.py
include/ToolBOSCore/CIA/: PatchSystem.py  PatchSystemGUI.py  __init__.py
include/ToolBOSCore/GenericGUI/: AboutDialog.py  BusyWaitDialog.py  ErrorDialog.py  IconProvider.py  JupyterWidget.py  PixmapProvider.py  ProcessExecutor.py  TerminalWidget.py  UnicodeSupport.py  WebBrowser.py
include/ToolBOSCore/Settings/: AppConfig.py  ConfigOptions.py  PreferencesDialog.py  ProcessEnv.py  ToolBOSConf.py  ToolBOSSettings.py  UserSetup.py
include/ToolBOSCore/SoftwareQuality/: CAnalyzer.py  CAnalyzerElements.py  CheckRoutine.py  CheckRoutineDialog.py  Common.py  Rules.py
include/ToolBOSCore/Storage/: AbstractVCS.py  AbstractWriter.py  BashSrc.py  CMakeCompileCommands.py  CMakeLists.py  CmdSrc.py  CopyTreeFilter.py  DTBOSCfg.py  GitSVNBridge.py  LibIndex.py  PackageVar.py  PkgInfo.py  PkgInfoInterface.py  PkgInfoWriter.py  ProxyDir.py  SIT.py  Serialize.py  UserInstallPHP.py  UserSrcPHP.py  VersionControl.py
include/ToolBOSCore/Tools/: CLion.py  CMake.py  ClangTidy.py  Git.py  GitLab.py  IntelliJ.py  Klocwork.py  Matlab.py  PyCharm.py  Pylint.py  RTMaps.py  SSH.py  SVN.py  SonarQube.py  (+3 more)
include/ZenBuildMode/: DependencyDetector.py
maintainer/: PortingToNewPlatform.txt  bumpVersion.sh
test/BuildSystemTools/: TestBuildSystemTools.sh
test/BuildSystemTools/ProxyInstallation/ExamplePackage/1.0/: CMakeLists.txt
test/BuildSystemTools/ProxyInstallation/ExamplePackage/1.0/examples/: HelloWorld.c  printfunc.c  printfunc.h
test/CAnalyzer/: TestCAnalyzer.py  test_canalyzer.cpp
test/CoreLibrary/: TestCoreLibrary.sh
test/HelpTextConsistency/: CreateGroundTruthData.py  TestHelpTextConsistency.py
test/MakeShellfiles/: TestMakeShellfiles.py  ToolBOSCore-3.0-BashSrc  ToolBOSCore-3.0-CmdSrc.bat  ToolBOSCore-3.0-pkgInfo.py  ToolBOSCore-BashSrc  ToolBOSCore-CmdSrc.bat  ToolBOSCore-pkgInfo.py  copyShellfiles.sh
test/Misc/: TestMisc.sh
test/SIT/: TestSIT.sh
test/SoftwareQuality/: TestSoftwareQuality.sh  test_Rules.py
test/SoftwareQuality/CheckRoutine/ReferenceData/TestPackageForC/: CMakeLists.txt  pkgInfo.py  unittest.sh
test/SoftwareQuality/CheckRoutine/ReferenceData/TestPackageForC/src/: AnyExit.c  AnyExit.h  ArrayList.h  BaseTypes.h  IOChannelMem.c  IOChannelReferenceValue.c  TestIOChannelMain.cpp  TestPackageForC.c  TestPackageForC.h
test/SoftwareQuality/CheckRoutine/ReferenceData/TestPackageForC/test/: unittest.c
test/Tools/: TestTools.sh
test/UserSetup/: TestUserSetup.sh
test/Util/: TestFastScript.py
test/Utils/: TestArgsManagerV2.py  TestUtils.sh
test/VersionControl/: TestVersionControl.sh
test/todo/: AnyString.c  Integrationtest_Serialize_testSuite.cpp  blackList.txt
(+173 files in other folders)
